--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   font_awesome_flutter: ^9.2.0
   dio: ^4.0.4
   shared_preferences: ^2.0.11
+  pin_code_fields: ^7.3.0
+  flare_flutter: ^3.0.2
+  flutter_countdown_timer: ^4.1.0
+  flutter_bloc: ^8.0.0
 
 dev_dependencies:
   flutter_test:
